--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "gulpfile.babel.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "poststart": "npm prune --production",
     "start": "gulp serve",
     "prebuild": "gulp clean",
     "lint": "gulp lint",
@@ -37,6 +38,7 @@
     "react-tap-event-plugin": "^2.0.1"
   },
   "devDependencies": {
+    "gulp-gzip" : "^1.4.0",
     "babel-core": "^6.3.21",
     "babel-eslint": "^7.0.0",
     "babel-preset-es2015": "^6.3.13",
