--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "gulp-gzip" : "^1.4.0",
+    "rimraf":"2.3.0",
     "babel-core": "^6.3.21",
     "babel-eslint": "^7.0.0",
     "babel-preset-es2015": "^6.3.13",
