--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-fileupload-progress": "^0.3.0",
     "react-router": "^2.0.0",
     "react-select": "^v0.9.1",
+    "react-i18next": "^1.10.1",
     "i18next": "3.3.1",
     "i18next-browser-languagedetector": "0.3.0",
     "i18next-xhr-backend": "0.6.0",
@@ -38,7 +39,6 @@
     "react-tap-event-plugin": "^2.0.1"
   },
   "devDependencies": {
-    "gulp-gzip" : "^1.4.0",
     "babel-core": "^6.3.21",
     "babel-eslint": "^7.0.0",
     "babel-preset-es2015": "^6.3.13",
@@ -67,13 +67,13 @@
     "gulp-uglify": "^1.5.1",
     "gulp-useref": "^3.0.4",
     "gulp-using": "^0.1.0",
+    "gulp-gzip" : "^1.4.0",
     "history": "^1.17.0",
     "merge-stream": "^1.0.0",
     "require-dir": "^0.3.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.6.1",
-    "react-i18next": "^1.10.1"
+    "watchify": "^3.6.1"
   },
   "author": [
     "Gustavo Modinos"
